--- a/components/server_monitor_handler/log.html
+++ b/components/server_monitor_handler/log.html
@@ -3,6 +3,7 @@
 <head>
 	<title>ESP-MONITOR - LOG</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8"/>
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
