Spiffs webserver + config.xml

--- a/components/server_monitor_handler/pages/index.html
+++ b/components/server_monitor_handler/pages/index.html
@@ -30,16 +30,16 @@
 		}
 	</script>
 </head>
-<body>
+<body onload="loadXMLDoc();">
 	<div class="topnav">
 		<a class="active" href="index.html">Configuration</a>
 		<a href="log.html">Log</a>
 		<a href="sensor_data.html">Sensor data</a>
 		<div class="info">
-			Firmware Version: <strong> %F_VERSION%</strong><br>
-			Hardware Version: <strong> %H_VERSION%</strong><br>
-			Sensor Type: <strong> %S_TYPE%</strong><br>
-			Location: <strong> %S_LOCATION%</strong><br>
+			Firmware Version: <strong id="f_version"> %F_VERSION%</strong><br>
+			Hardware Version: <strong id="h_version"> %H_VERSION%</strong><br>
+			Sensor Type: <strong id="sensor_type"> %S_TYPE%</strong><br>
+			Location: <strong id="location"> %S_LOCATION%</strong><br>
 		</div>
 	</div> 
 
