--- a/components/server_monitor_handler/pages/index.html
+++ b/components/server_monitor_handler/pages/index.html
@@ -7,43 +7,46 @@
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript">
-		function loadXMLDoc() {
+		function loadConfigDoc() {
 		  var xmlhttp = new XMLHttpRequest();
 		  xmlhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 					loadData(this);
 			}
 		  };
-		  xmlhttp.open("GET", "config.xml" , true);
+		  xmlhttp.open("GET", "config.txt" , true);
 		  xmlhttp.send();
 		}
 
-		function loadData(xml) {
-			var xmlDoc = xml.responseXML;
-			document.getElementById("f_version").innerHTML = xmlDoc.getElementsByTagName("f_version")[0].childNodes[0].nodeValue;
-			document.getElementById("h_version").innerHTML = xmlDoc.getElementsByTagName("h_version")[0].childNodes[0].nodeValue;
-			document.getElementById("sensor_type").innerHTML = xmlDoc.getElementsByTagName("sensor_type")[0].childNodes[0].nodeValue;
-			document.getElementById("location").innerHTML = xmlDoc.getElementsByTagName("location")[0].childNodes[0].nodeValue;
-			document.getElementById("xml").value = "NULL";
-			var oSerializer = new XMLSerializer();
-			var sXML = oSerializer.serializeToString(xmlDoc);
-			document.getElementById("xml").value = sXML;
+		function loadData(txt) {
+			var allText = txt.responseText;
+			document.getElementById("txt").value = allText;
+			var pos = allText.indexOf("f_version=") + 10;
+			var end = allText.indexOf(";", pos);
+			document.getElementById("f_version").innerHTML = allText.slice(pos, end);
+			pos = allText.indexOf("h_version=") + 10;
+			end = allText.indexOf(";", pos);
+			document.getElementById("h_version").innerHTML = allText.slice(pos, end);
+			pos = allText.indexOf("sensor_type=") + 12;
+			end = allText.indexOf(";", pos);
+			document.getElementById("sensor_type").innerHTML = allText.slice(pos, end);
+			pos = allText.indexOf("location=") + 9;
+			end = allText.indexOf(";", pos);
+			document.getElementById("location").innerHTML = allText.slice(pos, end);
 		}
 		
 		function sendForm() {
-			var formData = document.getElementById("xml").value;
-			var temp = formData.replace(/&lt;/g,"<");
-			formData = temp.replace(/&gt;/g,">");
+			var formData = document.getElementById("txt").value;
 			
-		    var xmlhttp = new XMLHttpRequest();
-			xmlhttp.open('POST','config.xml', true);
+			var xmlhttp = new XMLHttpRequest();
+			xmlhttp.open('POST','config.txt', true);
 			xmlhttp.onreadystatechange = function() {
 				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
 					console.log(xmlhttp.responseXML);
 				}
 			};
 			
-			xmlhttp.setRequestHeader('Content-Type', 'text/xml');
+			xmlhttp.setRequestHeader('Content-Type', 'text/plain');
 			
 			xmlhttp.send(formData);
 			
@@ -72,7 +75,7 @@
 		}
 	</script>
 </head>
-<body onload="loadXMLDoc();">
+<body onload="loadConfigDoc();">
 	<div class="topnav">
 		<a class="active" href="index.html">Configuration</a>
 		<a href="log.html">Log</a>
@@ -87,8 +90,8 @@
 
 	<h1>ESP-MONITOR - Configuration</h1>
 	<form method="POST" id="config_form" target="_parent">
-		<textarea id="xml" form="config_form" style="width: 550px; height: 500px;">{{xmlString}}</textarea><br><br>
-		<input type="submit" value="SaveXML" onclick="return sendForm();">
+		<textarea id="txt" style="width: 550px; height: 500px;">{{xmlString}}</textarea><br><br>
+		<input type="submit" value="SaveConfig" onclick="return sendForm();">
 	</form>
 	<br><br>
 	<p id="response" ></p>
