--- a/html/style.css
+++ b/html/style.css
@@ -66,7 +66,17 @@ p{
   float: right;
   color: #f2f2f2;
   text-align: right;
-  padding: 2px 16px;*/
+  padding: 2px 16px;
   text-decoration: none;
   font-size: 10px;
+}
+#output {
+  font-family: monospace;
+  line-height: 0.25;
+  text-align: left;
+  width: 75%;
+  margin: auto;
+  background: black;
+  padding: 10px 30px;
+  border-radius: 20px;
 }
